--- a/roles/archer/vars/main.yaml
+++ b/roles/archer/vars/main.yaml
@@ -3,7 +3,7 @@ username: igortxra
 dotfiles:
     url: https://github.com/igortxra/dotfiles-clean.git
 
-github_clones:
+git_clones:
     - name: Zsh Autosuggestions
       repo: https://github.com/zsh-users/zsh-autosuggestions 
       dest: "/home/{{ username }}/.zsh/zsh-autosuggestions"
@@ -20,10 +20,6 @@ github_clones:
       repo: https://github.com/AstroNvim/AstroNvim 
       dest: "/home/{{ username }}/.config/nvim"
 
-    - name:  Testing
-      repo: https://github.com/igortxra/udev-rules.git
-      dest: "/home/{{ username }}/ansible/udev-rules"
-
 packages:
 
     # Essencial
@@ -34,14 +30,6 @@ packages:
     - arandr
     - autorandr
 
-    # Developer
-    - docker
-    - neovim
-    - github-cli
-    - asdf-vm
-    - kubectl
-    - kind
-    
     # Wallpapers
     - feh
 
@@ -51,10 +39,6 @@ packages:
     # Version Control
     - git
     - github-cli
-
-    # Network
-    - networkmanager
-
 
     # Window Manager
     - qtile
@@ -126,6 +110,14 @@ packages:
     # Required to run AppImages
     - fuse2
 
+    # Developer Tools
+    - docker
+    - neovim
+    - github-cli
+    - asdf-vm # AUR
+    - kubectl
+    - kind
+    
     # Personal Needs
     - discord
     - spotify-launcher
